checkId enviado e multiple checks ajustado